--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "treble-gsm",
+  "name": "treble-fetch",
   "version": "1.0.0-alpha.1",
   "description": "Fetching, Prefetching, and Cache Extension for Treble-GSM",
   "main": "./lib/index.js",
@@ -31,7 +31,7 @@
   "author": "David Sanders <dsanders@mediafish.io>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hjrdave/treble-fetchg/issues"
+    "url": "https://github.com/hjrdave/treble-fetch/issues"
   },
   "homepage": "https://github.com/hjrdave/treble-fetch#readme",
   "devDependencies": {
@@ -62,6 +62,9 @@
   "dependencies": {},
   "peerDependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "treble-gsm": "^1.2.3",
+    "@types/react-router-dom": "^5.1.3",
+    "react-router-dom": "^5.1.2"
   }
 }
