--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "files": [
     "lib",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "/lib/index.d.ts"
   ],
   "repository": {
     "type": "git",
@@ -43,6 +44,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/node": "^13.13.4",
     "@types/react": "^16.9.23",
     "@types/react-router-dom": "^5.1.5",
     "babel-eslint": "^10.0.1",
@@ -61,13 +63,17 @@
     "mocha": "^6.1.3",
     "nyc": "^13.3.0",
     "rimraf": "^2.6.2",
-    "treble-gsm": "file:../../../../usr/local/lib/node_modules/treble-gsm",
     "vsts": "^2.1.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/uniqid": "^4.1.3",
+    "uniqid": "^5.2.0"
+  },
   "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "treble-gsm": "^1.2.3",
+    "uniqid": "^5.2.0"
   }
 }
