--- a/package.json
+++ b/package.json
@@ -72,8 +72,6 @@
   "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "treble-gsm": "^1.2.3",
-    "uniqid": "^5.2.0"
+    "treble-gsm": "^1.2.3"
   }
 }
