fixed the option.trigger issue. useFetch will now rerun fetch when prop is triggered.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "treble-fetch",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.7",
   "description": "Fetching, Prefetching, and Cache Extension for Treble Global State Management Library",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
     "start": "babel --watch src --out-dir lib --extensions .ts,.tsx",
     "build": "babel src --out-dir lib --extensions .ts,.tsx && tsc --emitDeclarationOnly",
-    "tsc:watch": "tsc --watch --emitDeclarationOnly"
+    "tsc:watch": "tsc --watch --emitDeclarationOnly",
+    "publish": "npm run build & npm publish"
   },
   "files": [
     "lib",
