--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "treble-fetch",
-  "version": "1.0.0-alpha.14",
+  "version": "1.0.1",
   "description": "Fetching, Prefetching, and Cache Extension for Treble Global State Management Library",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
