--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vsts": "^2.1.2"
   },
   "dependencies": {
+    "@types/react": "^17.0.3",
     "uniqid": "^5.2.0"
   },
   "peerDependencies": {
