--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",  
-    "lib": ["es2016", "dom"],
-    "module": "commonjs", 
-    "jsx": "react",                    
-    "declaration": true,     
-    "outDir": "./lib",                      
-    "removeComments": true,               
-    "strict": true,                           
-    "noImplicitAny": true,              
-    "esModuleInterop": true, 
-    "allowJs": true                 
+    "target": "es5",
+    "lib": [
+      "es2016",
+      "dom"
+    ],
+    "module": "commonjs",
+    "jsx": "react",
+    "declaration": true,
+    "outDir": "./lib",
+    "removeComments": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "skipLibCheck": true
   },
   "include": [
     "src"
