--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "treble-fetch",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.6",
   "description": "Fetching, Prefetching, and Cache Extension for Treble Global State Management Library",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -54,22 +54,18 @@
     "babel-preset-minify": "^0.5.1",
     "chai": "^4.1.2",
     "cross-env": "^5.2.1",
-    "eslint": "^5.16.0",
+    "eslint": "^8.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "mocha": "^6.1.3",
-    "nyc": "^13.3.0",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0",
     "rimraf": "^2.6.2",
     "vsts": "^2.1.2"
   },
   "dependencies": {
+    "@types/react": "^17.0.39",
     "uniqid": "^5.2.0"
-  },
-  "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "treble-gsm": "^2.1.0"
   }
 }
