--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "treble-fetch",
-  "version": "1.0.0-beta.13",
+  "version": "1.0.0-beta.15",
   "description": "Fetching, Prefetching, and Cache Extension for Treble Global State Management Library",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -62,6 +62,7 @@
     "mocha": "^9.2.0",
     "nyc": "^15.1.0",
     "rimraf": "^2.6.2",
+    "typescript": "^4.6.2",
     "vsts": "^2.1.2"
   },
   "dependencies": {
